# mcp-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  python.rs  server.rs  util.rs
src/tools/: datetime.rs  mod.rs  python.rs
